--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@shopify/flash-list": "1.7.3",
     "@uidotdev/usehooks": "^2.4.1",
     "apisauce": "3.0.1",
+    "babel-plugin-inline-import": "^3.0.0",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.40.0",
     "expo": "~52.0.7",
     "expo-build-properties": "~0.13.1",
     "expo-dev-client": "~5.0.1",
@@ -44,6 +46,7 @@
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.10",
+    "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "i18next": "^23.14.0",
@@ -69,6 +72,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "~18.3.12",
     "babel-jest": "^29.2.1",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
